# swagger/swagger.yml
@@ -2312,6 +2312,42 @@ paths:
               type: string
         "404":
           description: '{"error": "Not Found"}'
+  /cluster/eks/applyagent/{projectId}:
+    post:
+      tags:
+      - cluster/eks
+      description: Apply cloudplex Agent file to eks cluster
+      operationId: EKSClusterController.Start Agent
+      parameters:
+      - in: header
+        name: clusterName
+        description: clusterName
+        required: true
+        type: string
+      - in: header
+        name: X-Auth-Token
+        description: token
+        required: true
+        type: string
+      - in: header
+        name: X-Profile-Id
+        description: vault credentials profile id
+        required: true
+        type: string
+      - in: path
+        name: projectId
+        description: Id of the project
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{"msg": "Agent Applied successfully"}'
+        "401":
+          description: '{"error": "Unauthorized"}'
+        "404":
+          description: '{"error": "Not Found"}'
+        "500":
+          description: '{"error": "Runtime Error"}'
   /cluster/eks/instances/{projectId}/:
     get:
       tags:
@@ -6997,37 +7033,37 @@ definitions:
   '*ec2.BlockDeviceMapping':
     title: BlockDeviceMapping
     type: object
-  482.0xc001a0c510.false:
+  482.0xc00193fa40.false:
     title: "false"
     type: object
-  648.0xc001123f50.false:
+  618.0xc0010871a0.false:
     title: "false"
     type: object
-  667.0xc0018fb980.false:
+  667.0xc00184aed0.false:
     title: "false"
     type: object
-  964.0xc0014a03c0.false:
+  964.0xc0013e6c60.false:
     title: "false"
     type: object
-  5476.string:
+  5534.string:
     title: string
     type: object
-  8131.string:
+  8189.string:
     title: string
     type: object
-  8869.string:
+  8927.string:
     title: string
     type: object
   11642.string:
     title: string
     type: object
-  14388.0xc001a40480.false:
+  14388.0xc00197f9b0.false:
     title: "false"
     type: object
-  57609.0xc0019af770.false:
+  57609.0xc0018fccc0.false:
     title: "false"
     type: object
-  58305.string:
+  59816.string:
     title: string
     type: object
   64016.string:
@@ -7310,7 +7346,7 @@ definitions:
         description: Company Id of the project [optional]
         type: string
       kube_credentials:
-        $ref: '#/definitions/648.0xc001123f50.false'
+        $ref: '#/definitions/618.0xc0010871a0.false'
       name:
         description: Name of the project [required]
         type: string
@@ -7752,7 +7788,7 @@ definitions:
       cloud:
         $ref: '#/definitions/models.Cloud'
       kube_credentials:
-        $ref: '#/definitions/964.0xc0014a03c0.false'
+        $ref: '#/definitions/964.0xc0013e6c60.false'
       name:
         type: string
       network_name:
@@ -8279,7 +8315,7 @@ definitions:
       status:
         type: string
       tags:
-        $ref: '#/definitions/58305.string'
+        $ref: '#/definitions/59816.string'
       template_id:
         type: string
       version:
@@ -9483,7 +9519,7 @@ definitions:
       is_cloudplex:
         type: boolean
       kube_credentials:
-        $ref: '#/definitions/57609.0xc0019af770.false'
+        $ref: '#/definitions/57609.0xc0018fccc0.false'
       kube_version:
         type: string
       name:
@@ -9756,7 +9792,7 @@ definitions:
       company_id:
         type: string
       kube_credentials:
-        $ref: '#/definitions/14388.0xc001a40480.false'
+        $ref: '#/definitions/14388.0xc00197f9b0.false'
       name:
         type: string
       node_pools:
